--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "prod": "NODE_ENV=PROD node server.js"
+    "start": "node index.js",
+    "prod": "NODE_ENV=PROD node index.js"
   },
   "keywords": [],
   "author": "",
