--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "mocha ./src/test/products.test.js",
     "dev": "nodemon -r dotenv/config server.js",
-    "start": "node server.js"
+    "start": "node server.js npm install --omit=dev"
   },
   "keywords": [],
   "author": "ivan Romero",
