--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "ivan Romero",
+  "author": "ivan Romero1",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
